--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,9 @@ dj-database-url==0.3.0
 dj-static==0.0.6
 django-toolbelt==0.0.1
 gunicorn==19.1.1
+lxml==3.4.0
+oauthlib==0.6.3
 psycopg2==2.5.4
+requests==2.4.3
+requests-oauthlib==0.4.1
 static3==0.5.1
